# bitdb

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
benches/: engine.rs
bitdb/: AGENTS.md  Cargo.toml
bitdb/docs/: ARCHITECTURE.md
bitdb/src/: main.rs
bitdb/src/index/: keydir.rs
bitdb/src/storage/: hint_file.rs
bitdb/src/tui/: app.rs  event.rs
bitdb/tests/: basic.rs  bench_cli.rs  hint.rs  merge.rs  parallel_merge.rs  parallel_rebuild.rs  rebuild.rs  recovery.rs  storage.rs  tui.rs
docs/: cover.md  impl.md  report.md  slides.md
src/: bench.rs  cli.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  merge.rs  record.rs  recovery.rs
src/index/: mod.rs
src/storage/: data_file.rs  file_set.rs  mod.rs
src/tui/: mod.rs  ui.rs
tests/: cli.rs  hint.rs  rebuild.rs  record.rs
tracer/: Cargo.toml
tracer/docs/: ARCHITECTURE.md
tracer/src/: dataset.rs  lib.rs  main.rs  worker.rs
tracer/src/tui/: generate.rs  live.rs  mod.rs  result.rs  setup.rs
tracer/tests/: assignment.rs  dataset.rs  tui_state.rs  worker.rs
