[package]
name = "bitdb"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
crc32fast = "1.4.2"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"
tempfile = "3.19.1"

[[bench]]
name = "engine"
harness = false
