[package]
name = "tracer"
version = "0.1.0"
edition = "2024"

[lib]
name = "tracer"
path = "src/lib.rs"

[dependencies]
bitdb      = { path = "../bitdb" }
crossterm  = "0.28"
rand       = "0.9"
ratatui    = "0.29"
rayon      = "1.10"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.19.1"
